# ddeutil-pyspark

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.spark-init/solution01/: README.md  docker-compose.yml
.spark-init/solution01/scripts/: start-spark.sh
.spark-init/solution02/: Dockerfile  README.md  docker-compose.yml
backup/solution01/: Dockerfile  README.md
backup/solution01/scripts/: start-spark.sh
src/ddeutil/mypyspark/: main.py
src/ddeutil/pyspark/: __about__.py
